--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 <body>
 
     <header>
-        
+        <nav>
+            <ul>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="sales.html">Sales</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </nav>
+        <img src="/img/salmon.png" alt="Salmon Cookies">
     </header>
 
     <main>
+        <h2> Welcome to Pat's Salmon Cookies </h2>
 
+        <p> the best in cookies worldwide </p>
 
 
     </main>
 
 
     <footer>
-
-
+        <h4>Copy right &copy; 2021</h4>
     </footer>
 
 </body>
