--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <main>
         <h2> Welcome to Pat's Salmon Cookies </h2>
 
-        <p> the best in cookies worldwide </p>
+        <p> The best in cookies worldwide </p>
 
 
     </main>
 
 
     <footer>
-        <h4>Copy right &copy; 2021</h4>
+        <p>Copy right &copy; 2021</p>
     </footer>
 
 </body>
