fixing the header of table

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
-        <img src="/img/salmon.png" alt="Salmon Cookies">
+        <img src="./img/salmon.png" alt="Salmon Cookies">
     </header>
 
     <main>
