--- a/sales.html
+++ b/sales.html
@@ -11,6 +11,21 @@
 </head>
 
 <body>
+    <header>
+
+        <img src="./img/salmon.png" alt="Salmon Cookies">
+
+        <nav>
+
+            <a href="Index.html">Home</a>
+            <a href="sales.html">Sales</a>
+            <a href="">Contact Us</a>
+
+        </nav>
+
+    </header>
+
+    <main>
 
     <div id="title">
 <h1>Pat's Salmon Cookies: Sales Data</h1>
@@ -19,7 +34,12 @@
 
 
     </div>
+</main>
 
+<footer>
+    <p>Copy right &copy; 2021</p>
+
+</footer>
 
     <script src="js/app.js"></script>
 </body>
