--- a/sales.html
+++ b/sales.html
@@ -17,7 +17,7 @@
 
         <nav>
 
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="sales.html">Sales</a>
             <a href="">Contact Us</a>
 
