--- a/sales.html
+++ b/sales.html
@@ -27,19 +27,53 @@
 
     <main>
 
-    <div id="title">
-<h1>Pat's Salmon Cookies: Sales Data</h1>
-    </div>
-    <div id="cookie">
+        <div id="title">
+            <h1>Pat's Salmon Cookies: Sales Data</h1>
+        </div>
+        <div id="cookie">
 
 
-    </div>
-</main>
+        </div>
+        <fieldset>
+            <form id="form">
 
-<footer>
-    <p>Copy right &copy; 2021</p>
+                <br>
+                <label for="location">Enter the shop's name</label>
 
-</footer>
+                <input type="text" id="location" placeholder="location" name="location" autocomplete="off" required>
+
+                <br>
+
+
+                <label for="minCst">Enter the minimum number of customers</label>
+
+                <input type="number" id="minCst" name="minCst" min="0" max="1000" required maxlength="30">
+                <br>
+
+                <label for="maxCst">Enter the maximum number of customers</label>
+
+                <input type="number" id="maxCst" name="maxCst" min="0" max="1000" required>
+                <br>
+
+                <label for="avgCookiesSale">Enter the average number of cookies </label>
+
+                <input type="number" id="avgCookiesSale" name="avgCookiesSale" step="0.1" min="0" max="1000" required>
+                <br>
+
+
+                <input type="Submit" value="submit" id="button">
+
+
+            </form>
+        </fieldset>
+
+
+    </main>
+
+    <footer>
+        <p>Copy right &copy; 2021</p>
+
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
