--- a/index.html
+++ b/index.html
@@ -54,25 +54,37 @@
 
 
 
-            <p>We have branches in:</p>
-            <br>
+            <p>Where You Can Find Us :</p>
+
             <ul>
-                <li>Seattle </li>
-                <li>Paris</li>
-                <li>Dubai</li>
-                <li>Tokyo</li>
-                <li>Lima</li>
+                <li>SEATTLE: 9241 13th Ave SW Seattle, Washington(WA)<br><br>
+                    <small>For reservation: (206) 721-8534 </small>
+                </li><br>
+                <li>PARIS: 29 rue Clement Marot, PÉrigueux,Aquitaine <br><br>
+                    <small>For reservation: 01.56.48.50.17 </small>
+                </li><br>
+                <li>DUBAI: Old Town <br><br>
+                    <small>For reservation: +971(4)2718495</small>
+                </li><br>
+                <li>TOKYO: 9-10, Uehara 3-chome,Shibuya-ku <br><br>
+                    <small>For reservation: +8150-244-2020 </small>
+                </li><br>
+                <li>LIMA: Avenida Loma Hermosa, 223/225,Lima <br><br>
+                    <small>For reservation: (01)653-6394 </small>
+                </li><br>
             </ul>
-            <br>
+
             <p>Our open hours: 6am till 8 pm<br><br>for more information please send us an e-mail at :
                 info@cookie-stand.com</p>
-            <br>
+
 
         </section>
-        
+
         <section id=soon>
+            <br>
             <h4>Soon<br>Our branch in Amman</h4>
             <br>
+        
         </section>
 
         <section id="best">
